# cgCompress

./: .gitignore  CMakeLists.txt  README.md  cgCompress.pro
analyser/: cgCompress.pro  main.cpp
doxygen/: Doxyfile
js-decoder/: blending.js  index.html  libcgcompress.js  loadImage.js  main.js
kde-cgcompress-thumbnailer/: CMakeLists.txt  cgcompress.xml  cgcompressthumbnailer.desktop  cgcreator.cpp  cgcreator.hpp  dump.desktop
src/: CMakeLists.txt  Compression.cpp  Compression.hpp  Conversion.hpp  ConversionSteps.cpp  ConversionSteps.hpp  Converter.cpp  Converter.hpp  CsvWriter.cpp  CsvWriter.hpp  FileSizeEval.cpp  FileSizeEval.hpp  FileUtils.cpp  FileUtils.hpp  Format.cpp  Format.hpp  Frame.cpp  Frame.hpp  Image.cpp  Image.hpp  ImageOptim.cpp  ImageOptim.hpp  ImageSimilarities.cpp  ImageSimilarities.hpp  ListFunc.hpp  MultiImage.cpp  MultiImage.hpp  OraSaver.cpp  OraSaver.hpp  ProgressBar.hpp  SubImage.hpp  SubQImage.hpp  main.cpp
src/decoder/: CgImage.cpp  CgImage.hpp  OraHandler.cpp  OraHandler.hpp
src/formats/: FormatWebP.cpp  FormatWebP.hpp
src/images/: Blend.hpp  Image.hpp  ImageView.hpp  Rgba.cpp  Rgba.hpp
src/minizip/: ioapi.cpp  zip.cpp
tools/parallel-decode-test/: cgCompress.pro  main.cpp
